エラーログ出力有効化

--- a/original/php.ini
+++ b/original/php.ini
@@ -3,3 +3,10 @@ date.timezone = "Asia/Tokyo"
 [mbstring]
 mbstring.internal_encoding = "UTF-8"
 mbstring.language = "Japanese"
+[error]
+error_reporting = "E_ALL"
+display_errors = "On"
+log_errors = true
+error_log = "/var/log/apache2/error_log"
+[buffer]
+output_buffering = "4096"
