--- a/original/php.ini
+++ b/original/php.ini
@@ -3,6 +3,7 @@ date.timezone = "Asia/Tokyo"
 [mbstring]
 mbstring.internal_encoding = "UTF-8"
 mbstring.language = "Japanese"
+sendmail_path = "/usr/sbin/sendmail -t -i -fuser@example.com"
 [error]
 error_reporting = "E_ALL"
 display_errors = "On"
